# 8thDegree

./: .cursorignore  .env.example  .env.prod  .eslintrc.json  .gitignore  .gitmodules  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OWNERSHIP.md  README.md  SECURITY.md  branch_protection.json  dev.sh  docker-compose.yml  tatus  [A[A[A[D[D[D[A[A[A[C[C[C[B  [A[A[A[D[D[D[A[A[A[C[C[C[B.pub
.github/: CODEOWNERS  (+1 more)
backend/: .env.example  .env.prod  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/.github/workflows/: ci.yml
backend/app/: database.py  main.py  models.py
backend/app/ai/: client.py  handlers.py
backend/app/api/endpoints/: freelancers.py  jobs.py  matching.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  logging.py  rate_limit.py  realtime.py  session.py
backend/app/db/: init_sharding.py  session.py
backend/app/middleware/: rate_limit.py  validation.py
backend/app/models/: __init__.py  ai.py  base.py  freelancer.py  job.py  job_match.py  mixins.py  review.py  user.py
backend/app/routers/: auth.py  job.py  oauth.py  user.py
backend/app/schemas/: freelancer.py  user.py
backend/app/services/: matching_service.py
backend/app/tests/: conftest.py
backend/docs/: VISION_ALIGNMENT.md  cursorcontext.md  implementationplan.md
backend/fairgig/: main.py  models.py
backend/fairgig/routers/: job.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  27780ce8428b_initial_database_schema.py
backend/tests/: test_jobs.py  test_users.py
(+121 files in other folders)
